# hoi-dataset-tools

./: .gitignore  README.md  TODO.md  aria_credentials.example.yaml  pyproject.toml  requirements.txt
calibration/: Dockerfile  README.md  docker-compose.yml
data_processing/: README.md  data_loader.py
data_processing/configs/: extraction_example.yaml
data_processing/docker/aria/: Dockerfile  docker-compose.yml
data_processing/docker/aria/.devcontainer/: Dockerfile  devcontainer.json
data_processing/docker/odometry/: Dockerfile-openvins-noetic  Dockerfile-orbslam3-melodic  Dockerfile-vinsfusion  Dockerfile-vinsfusion-melodic  Dockerfile_official  docker-compose.yaml
data_processing/src/hoi/annotation_tools/: annotate_artipoint_interactions.py  instance_annotator.py  interaction_splitting_verifier.py  sam2_service.py
data_processing/src/hoi/data_tools/: data_loader.py  (+42 more)
data_recording/: README.md
data_recording/arduino/: README.md
data_recording/arduino/force_trigger_calibration/: force_trigger_calibration.ino
data_recording/arduino/force_trigger_ros/: force_trigger_ros.ino
data_recording/docker/recording/: Dockerfile  Dockerfile-agx-orin-spot  Dockerfile-aria  Dockerfile-jetson  Dockerfile-light  Dockerfile-nano  basic.yaml  docker-compose.yml  entrypoint.sh  gripper_launch_single_force.launch  gripper_record_single_bag_svo.sh  hardware.env  setup_spot_nat_from_agx.sh  spot_launch_full.launch  spot_launch_teleop.launch  spot_record_full.sh  start_recording_interface_gripper.sh  zed2i.yaml  zed_common.yaml
data_recording/ros/: lenai_description.tar.xz
(+14 files in other folders)
