[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hoi-dataset-tools"
version = "0.1.0"
description = "Hoi! dataset tools"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "data_processing/src"}

[tool.setuptools.packages.find]
where = ["data_processing/src"]
include = ["hoi*"]
namespaces = true
